remove direct link to plannig portal

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,10 @@
 ---
 layout: base
 ---
+<meta name="robots" content="noindex, nofollow">
 
 <div class="intro-header"></div>
+
 
 <main class="{% if page.full-width %} container-fluid {% else %} container-md {% endif %}">
   {% if page.before-content %}
